--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
     <li><strong>User Input:</strong> Questions or messages you type into the app (used to generate AI responses).</li>
     <li><strong>Local Storage:</strong> All chats are stored securely on your device. We do not upload or store your conversations on our servers.</li>
     <li><strong>Advertising Data:</strong> Through Google AdMob, which may collect identifiers for personalized/non-personalized ads.</li>
-    <li>We do not collect sensitive personal data such as name, address, payment info etc.</li>
+    <li><strong>Sensitive Information:</strong>We do not collect sensitive personal data such as name, address, payment info etc.</li>
   </ul>
 
   <p><strong>2. How We Use Information</strong></p>
   <ul>
     <li>We do not collect any information.</li>
-    <li><strong>AI-powered educational responses:</strong> from Pre-trained LLM Model.</li>
-    <li><strong>To display ads:</strong> via AdMob.</li>
-    <li><strong>To prevent abuse:</strong> and maintain security.</li>
+    <li>AI-powered educational responses from Pre-trained LLM Model.</li>
+    <li>To display ads via AdMob.</li>
+    <li>To prevent abuse and maintain security.</li>
   </ul>
 
   <p><strong>3. Sharing of Information</strong></p>
   <ul>
-    <li><strong>Third-Party Services:</strong> We use trusted services like Google AdMob (ads).</li>
+    <li>We use trusted third-party services services like Google AdMob (ads).</li>
     <li>We do not collect, sell or trade your personal data.</li>
   </ul>
 
