--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <p><strong>2. How We Use Information</strong></p>
   <ul>
-    <li>We do not collect any information.</li>
+    <li>We do not collect any sensitive personal information.</li>
     <li>AI-powered educational responses from Pre-trained LLM Model.</li>
     <li>To display ads via AdMob.</li>
     <li>To prevent abuse and maintain security.</li>
